[package]
name = "crack-types"
version = "0.3.16-alpha.3"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "Common types for Crack Tunes."
keywords = ["music", "discord", "bot", "crack", "tunes", "types"]
categories = [
  "multimedia::audio",
  "multimedia::music",
  "multimedia::discord",
  "multimedia::bot",
]
homepage = "https://cracktun.es/"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."

[dependencies]
poise = { workspace = true }
songbird = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
chrono = "0.4.39"
once_cell = "1.20"
lyric_finder = "0.2.0"
lazy_static = "1.5"
audiopus = "0.3.0-rc.0"
anyhow = "1.0"
colored = "2.1"
futures = "0.3"
humantime = "2.1"
typemap_rev = "0.3"
rand = "0.8"
reqwest = { version = "0.12.9", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
  "cookies",
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.8"
url = "2.5"

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
ctor = "0.2"
