[package]
authors = ["Cycle Five <cycle.five@proton.me>"]
name = "cracktunes"
version = "0.3.7"
description = "Cracktunes is a hassle-free, highly performant, host-it-yourself, cracking smoking, discord-music-bot."
publish = true
edition = "2021"
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
repository = "https://git.sr.ht/~cycle-five/cracktunes"

[features]
default = ["crack-tracing", "ignore-presence-log"]
crack-gpt = ["dep:crack-gpt"]
crack-osint = ["dep:crack-osint"]
ignore-presence-log = []

crack-telemetry = ["crack-metrics"]
crack-tracing = ["tracing-subscriber"]
crack-metrics = ["prometheus"]
[dependencies]
# core
crack-core = { workspace = true }
# modules, each should be optional
crack-osint = { workspace = true, optional = true }
crack-gpt = { workspace = true, optional = true }

# Core's dependencies
poise = { workspace = true }
tokio = { workspace = true }
songbird = { workspace = true }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "json",
] }
async-trait = { version = "0.1.80" }
mockall = { version = "0.12.1" }
config-file = { version = "0.2.3", features = ["json"] }
dotenvy = "0.15.7"
colored = "2.1.0"
# Figure this one out better

tracing = { workspace = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }

# crack-metrics
prometheus = { version = "0.13.3", features = ["process"], optional = true }
# warp = { version = "0.3.7", features = ["tls"], optional = true }

# # Is this even needed? What did I add it for?
# This is needed for the tests to run in the IDE

[dev-dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "json",
] }
