[package]
authors = ["Cycle Five <cycle.five@proton.me>"]
name = "cracktunes"
version = "0.3.11"
description = "Cracktunes is a hassle-free, highly performant, host-it-yourself, cracking smoking, discord-music-bot."
publish = true
edition = "2021"
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
build = "build.rs"
workspace = "../"

[package.metadata.wix]
upgrade-guid = "902F8F40-A9A8-4DEE-96C0-A6274889F356"
path-guid = "9E215C2B-01F0-419D-BA4F-0E8C9FAC57AB"
license = true
eula = false

# [package.metadata.dist]
# features = [
#     "crack-gpt",
#     "crack-osint",
#     "crack-bf",
#     "crack-tracing",
#     "ignore-presence-log",
# ]

[features]
default = ["crack-tracing", "ignore-presence-log"]
# crack-gpt = ["dep:crack-gpt"]
# crack-osint = ["dep:crack-osint"]
# crack-bf = ["dep:crack-bf"]
ignore-presence-log = []

crack-telemetry = [
    "crack-metrics",
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-bunyan-formatter",
]
crack-tracing = ["tracing-subscriber"]
crack-metrics = ["prometheus", "warp"]

[dependencies]
# # modules, each should be optional
# crack-osint = { path = "../crack-osint/", optional = true }
# crack-gpt = { path = "../crack-gpt/", optional = true }
# crack-bf = { path = "../crack-bf/", optional = true }

config-file = { version = "0.2", features = ["json"] }
dotenvy = "0.15"
# tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

# crack-metrics
prometheus = { version = "0.13", features = ["process"], optional = true }
warp = { version = "0.3", default-features = false, features = [
    "tls",
], optional = true }
opentelemetry = { version = "0.23", optional = true }
opentelemetry_sdk = { version = "0.23", optional = true }
tracing-bunyan-formatter = { version = "0.3", optional = true }

crack-core = { workspace = true }
# Core's dependencies
poise = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
# Figure this one out better

tracing = { workspace = true }
# # Is this even needed? What did I add it for?
# This is needed for the tests to run in the IDE
[dev-dependencies]
sqlx = { workspace = true }

[build-dependencies]
vergen = { version = "8", features = ["git", "cargo", "si", "build", "gitcl"] }
